--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -5,13 +5,13 @@
     <title>Time Now</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript">
-        $(document).ready(function() {
+        $(document).ready(function () {
             $("#citys").change(function () {
                 var value = this.value;
                 $.ajax({
                     type: 'POST',
                     url: '/gettimezone',
-                    data:{val: value},
+                    data: {val: value},
                     success: function (data) {
                         $("#time").html(data);
                     }
@@ -26,10 +26,10 @@
 
 <table>
     <thead>
-        <tr>
-            <th>City</th>
-            <th>Curent Date</th>
-        </tr>
+    <tr>
+        <th>City</th>
+        <th>Curent Date</th>
+    </tr>
     </thead>
     <tbody>
     <tr>
@@ -42,7 +42,7 @@
                 <option value="Asia/Kolkata">New Delhi</option>
                 <option value="Asia/Singapore">Singapore</option>
                 <option value="Asia/Manila">Manila</option>
-                <option value="Europe/Kaliningrad">Nga</option>
+                <option value="Europe/Kaliningrad">Moscow</option>
             </select>
         </td>
         <td>
@@ -53,3 +53,4 @@
 </table>
 </body>
 </html>
+
